# CareerOS

./: .env.example  Dockerfile  README.md  index.html  package.json  pyproject.toml  render.yaml  tsconfig.build.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: feature_request.md  mvp_task.md
.github/workflows/: ci.yml  pages.yml
careeros/: __init__.py  analyzer.py  api.py  cli.py  models.py
docs/: admin-dashboard.md  api.md  architecture.md  backend-deploy.md  cli.md  funnel-strategy.md  github-pages.md  hh-integration.md  local-mvp-runbook.md  monetization-path.md  mvp-scope.md  privacy-and-safety.md  product-vision.md  scoring-model.md  typescript.md  waitlist-api.md
examples/: sample-analysis.md  sample-resume.md  sample-vacancy.md
schemas/: match-report.schema.json
scripts/: smoke-build.mjs
src/: adminAuth.ts  analyzer.ts  checkout.ts  checkoutIntent.ts  cli.ts  models.ts  server.ts  waitlist.ts
src/web/: AdminDashboard.tsx  App.tsx  apiBase.ts  checkoutIntentClient.ts  main.tsx  styles.css  waitlistAdminClient.ts  waitlistClient.ts
tests/: analyzer.test.ts  apiBase.test.ts  checkoutIntent.test.ts  server.test.ts  test_analyzer.py  test_api.py  test_match_report_contract.py  waitlist.test.ts  waitlistAdminClient.test.ts  waitlistClient.test.ts
